--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,12 +1,18 @@
 /* 120 pixels in height Full width of the viewport #4056A1 as its default background colour #FFFFFF as its default font colour <span>within the <nav>uses Bungee as its default font-family 1.5ems of space on the right and left between the content and the edges */
 
+nav {
+  position: fixed;
+  top: 0;
+  height: 120px;
+  width: 100%;
+}
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   position: sticky;
   top: 0;
-  /* height: 120px; */
   background-color: #4056a1;
   color: #FFFFFF;
 }
