--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -21,6 +21,17 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
 }
 
+main {
+  display: flex;
+  justify-content: center;
+  color: #545149;
+  background-color: #f4f1ec;
+  font-size: 24px;
+  font-family: 'Source Sans Pro', sans-serif;
+  width: 90%;
+  padding-left: 5em;
+}
+
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
