--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -23,7 +23,8 @@ body {
 
 main {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
