--- a/public/styles/tweet-element.css
+++ b/public/styles/tweet-element.css
@@ -4,6 +4,7 @@ article {
   border-style: solid;
   border-width: 3px;
 }
+
 .tweet {
   display: flex;
   flex-direction: row;
@@ -32,9 +33,27 @@ footer p span{
   font-size: 18px;
 }
 
+.handle {
+  color: rgb(165, 157, 157);
+}
+
 .icons {
   display: flex;
   flex-direction: row;
   flex-grow: 5;
   justify-content: end;
+}
+
+article:hover {
+  box-shadow: 0 0 11px rgba(33, 33, 33, .2);
+}
+
+#flag:hover {
+  color: rgb(212, 191, 52);
+}
+#retweet:hover {
+  color: rgb(212, 191, 52);
+}
+#heart:hover {
+  color: rgb(212, 191, 52);
 }
