--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,6 +1,7 @@
-header {
+.header {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   height: 400px;
   width: 100%;
