--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -22,15 +22,20 @@ body {
 }
 
 main {
+  margin: auto;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
   width: 90%;
-  padding-left: 5em;
+  height: 100%;
+  /* margin-left: 5%; */
+  /* margin-right: 5%; */
+  /* padding-left: 5em; */
 }
 
 
