--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,8 +1,12 @@
+.new-tweet {
+  width: 100%;
+}
+
 form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 30em;
+  width: 100%;
 }
 
 #tweet-text {
