implement input error messages using jQuery UI

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -37,3 +37,10 @@ font-family: 'Bungee';
   justify-content: space-between;
   width: 100%;
 }
+
+#tweet-check {
+  color: red;
+}
+#char-check {
+  color: red;
+}
