--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -5,6 +5,7 @@
   align-items: center;
   height: 400px;
   width: 100%;
+  background-color: rgb(202, 157, 33);
   background-image: url("https://www.transparenttextures.com/patterns/ps-neutral.png");
 }
 
@@ -21,3 +22,4 @@
   align-items: center;
   width: 100%;
 }
+
